--- a/react-4-common-people/src/index.css
+++ b/react-4-common-people/src/index.css
@@ -1,8 +1,159 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica", "Arial", sans-serif,
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fafafa;
+  color: #444;
+}
+button {
+  user-select: none;
+  outline: none;
+}
+.container {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
+.header {
+  width: 100%;
+  background-color: white;
+  padding: 30px 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #ccc;
+}
+.header .logo {
+  max-width: 222px;
+}
+
+.basket {
+  display: inline-block;
+  vertical-align: top;
+  width: 25%;
+  padding-right: 30px;
+  box-sizing: border-box;
+}
+.basket > h2 {
+  padding: 15px 22px;
+  margin: 0;
+  line-break: 33px;
+  border-bottom: 2px solid #f2a116;
+  font-size: 14px;
+}
+.basket .details {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.basket .item {
+  display: block;
+  width: 100%;
+  background: #fff;
+  padding: 15px;
+  font-weight: 500;
+  box-sizing: border-box;
+  margin-top: 10px;
+}
+.basket .item .title {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.5em;
+  color: #3a3939;
+  margin: 0px;
+}
+.basket .price {
+  display: block;
+  font-weight: 600;
+  font-size: 16px;
+  color: #444;
+  width: 100%;
+  text-align: right;
+  font-family: 'Oxygen', sans-serif;
+}
+.basket .item button {
+  background: #f2f4f6;
+  border: none;
+  padding: 5px 10px;
+  font-weight: 100;
+  font-size: 14px;
+  border-radius: 4px;
+}
+.basket .total {
+  display: block;
+  width: 100%;
+  padding: 15px;
+  font-weight: 500;
+  box-sizing: border-box;
+  margin-top: 10px;
+  border-top: 1px solid #ccc;
+}
+.basket .total .label {
+  width: auto;
+  text-align: left;
+  float: left;
+}
+.basket .checkout {
+  width: 100%;
+  text-align: center;
+  background: #f9cd6d;
+  border: none;
+  padding: 10px 0px;
+  font-weight: 100;
+  font-size: 14px;
+  border-radius: 4px;
+}
+
+.list {
+  display: inline-block;
+  vertical-align: top;
+  width: 75%;
+  margin: 0;
+  padding: 0;
+  margin-top: 48px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+  list-style: none;
+}
+.list .item {
+  display: inline-block;
+  width: 31%;
+  margin: 0 1% 15px;
+}
+
+.book {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 30px;
+  margin-right: 30px;
+  background-color: #f2f4f6;
+}
+.book .cover {
+  width: 100%;
+}
+.book .title {
+  font-size: 14px;
+  line-height: 23px;
+  color: #3a3939;
+  margin-top: 10px;
+}
+.book .price {
+  display: block;
+  font-weight: 600;
+  font-size: 20px;
+  color: #444;
+  width: 100%;
+  text-align: right;
+  margin-bottom: 15px;
+  font-family: 'Oxygen', sans-serif;
+}
+.book button {
+  width: 100%;
+  text-align: center;
+  background: #f9cd6d;
+  border: none;
+  padding: 10px 0px;
+  font-weight: 100;
+  font-size: 14px;
+  border-radius: 4px;
 }
